fixed overflow and instructions screen

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   max-height: 100vh;
   max-width: 100vw;
   overflow: hidden;
+  border: 5px solid black;
+  position: relative;
 }
 
 .bg-image {
