--- a/src/components/Instructions/instructions.css
+++ b/src/components/Instructions/instructions.css
@@ -6,8 +6,8 @@
   align-items: center;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 10;
   background-color: rgba(0, 0, 0, 0.779);
 }
